[package]
name = "virtual-sockets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures-buffered = "0.2.8"
iroh-quinn = { version = "0.13", git = "https://github.com/n0-computer/quinn.git", branch = "matheus23/mut-self" }
iroh-quinn-udp = { version = "0.5.7", git = "https://github.com/n0-computer/quinn.git", branch = "matheus23/mut-self" }
iroh-quinn-proto = { version = "0.13", git = "https://github.com/n0-computer/quinn.git", branch = "matheus23/mut-self" }
n0-future = "0.1.3"
tokio = { version = "1.28.1", features = ["rt", "macros", "sync", "time", "test-util"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1.41"
rcgen = "0.13"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pki-types = "1.7"
testresult = "0.4.1"
